# nyfusion-monitor

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/application/: CMakeLists.txt
src/application/services/: HardwareMonitorService.cpp  HardwareMonitorService.hpp
src/core/: CMakeLists.txt
src/core/common/: Types.cpp  Types.hpp
src/domain/: CMakeLists.txt
src/domain/hardware/: CPUInfo.hpp  GPUInfo.hpp  MemoryInfo.hpp
src/domain/providers/: CPUProvider.hpp  GPUProvider.hpp  MemoryProvider.hpp
src/infrastructure/: CMakeLists.txt
src/infrastructure/common/: ICpuFrequencySensor.hpp  ICpuPowerSensor.hpp  ICpuTemperatureSensor.hpp  ICpuUsageSensor.hpp  IMemorySensor.hpp  ISensor.hpp
src/infrastructure/common/cpu/: ICpuFrequencySensor.hpp  ICpuPowerSensor.hpp  ICpuTemperatureSensor.hpp  ICpuUsageSensor.hpp
src/infrastructure/linux/factory/: LinuxProviderFactory.cpp  LinuxProviderFactory.hpp
src/infrastructure/linux/providers/: LinuxCPUProvider.cpp  LinuxCPUProvider.hpp  LinuxGPUProvider.cpp  LinuxGPUProvider.hpp  LinuxMemoryProvider.cpp  LinuxMemoryProvider.hpp
src/infrastructure/linux/readers/: ProcStatReader.cpp  ProcStatReader.hpp
src/infrastructure/linux/sensors/: LinuxCpuFrequencySensor.hpp  LinuxCpuTemperatureSensor.hpp  LinuxCpuUsageSensor.cpp  LinuxCpuUsageSensor.hpp
src/infrastructure/linux/sensors/cpu/: LinuxCpuFrequencySensor.cpp  LinuxCpuFrequencySensor.hpp  LinuxCpuTemperatureSensor.cpp  LinuxCpuTemperatureSensor.hpp  LinuxCpuUsageSensor.hpp
src/infrastructure/linux/sensors/ram/: LinuxMemorySensor.cpp  LinuxMemorySensor.hpp
src/infrastructure/providers/stub/: StubCPUProvider.hpp  StubGPUProvider.cpp  StubGPUProvider.hpp  StubMemoryProvider.cpp  StubMemoryProvider.hpp
src/infrastructure/stub/factory/: StubProviderFactory.cpp  StubProviderFactory.hpp
src/infrastructure/stub/providers/: StubCPUProvider.cpp  StubCPUProvider.hpp  StubGPUProvider.hpp  StubMemoryProvider.hpp
src/ui/: CMakeLists.txt
src/ui/qt/: MainWindow.cpp  MainWindow.hpp
